--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,145 +19,64 @@
 
 <body>
     <header>
-        <section class="cajaHeader">
-            <div class="cajaHeaderPosition">
-                <h1 class="logoTitle">Zarlenga Propiedades</h1>
-            </div>
-            <div class="cajaHeaderPosition">
-                <ul class=cajaLista>
-                    <li><a class="estiloLista" href="#">Inicio</a></li>
-                    <li><a class="estiloLista" href="">Quiénes Somos</a></li>
-                    <li><a class="estiloLista" href="">Alquileres</a></li>
-                    <li><a class="estiloLista" href="">Terrenos</a></li>
-                    <li><a class="estiloLista" href="">Deco</a></li>
-                    <li><a class="estiloLista" href="">Contacto</a></li>
-                </ul>
-            </div>
-            <div class="cajaHeaderPosition">
-                <input class="navbar" placeholder="Buscar">
-                <button class="navbar" type="button">Buscar</button>
-            </div>
-        </section>
+        <h1 class="title">Zarlenga Propiedades</h1>
+        <nav class="main_navbar">
+            <ul>
+                <li><a href="#">inicio</a></li>
+                <li><a href="">alquileres</a></li>
+                <li><a href="">venta</a></li>
+                <li><a href="">tazar</a></li>
+                <li><a href="">contacto</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <h2> Alquileres Destacados</h2>
+    <img class="banner" src="img/paraProyecto.jpg">
+    <main class="main_wrapper">
         <section class="sectionAlq">
-
-            <div class="cajaAlquiler">
-                <img class="imagenes" src="img/paraProyecto.jpg">
-                <h2 class="advert">Av. Las Heras (Super Luminoso)</h2>
-                <p class="textAdvert"><strong>Excelente ubicación</strong> sobre <mark>Av. Las Heras</mark>a esquina
-                    <b>Sanchez
-                        de Bustamante</b>, próximo a todo tipo de medios de transporte público como así también a una
-                    cuadra
-                    de
-                    Av. Del Libertador.
-                    Edificio muy bien conservado, con 2 ascensores principales y uno de servicio.
-                    Piso alto, muy luminoso, todo externo al lateral.
-                    Hall acceso, cocina con lavadero incorporado sobre bajo mesada, mesada de granito negro , muchas
-                    alacenas y
-                    muebles de cocina.
-                    Living comedor de 5.00 x 3.00 con espacio para escritorio, 2 amplios dormitorios con mucho placard..
-                    Servicios individuales, calefón en cocina y estufas tiro balanceado en living y dormitorio. Aire
-                    acondicionado en L-comedo
-                </p>
-            </div>
-            <div class="cajaAlquiler">
-                <img class="imagenes" src="img/paraProyecto.jpg">
-                <h2 class="advert">Av. Las Heras (Super Luminoso)</h2>
-                <p class="textAdvert"><strong>Excelente ubicación</strong> sobre <mark>Av. Las Heras</mark>a esquina
-                    <b>Sanchez
-                        de Bustamante</b>, próximo a todo tipo de medios de transporte público como así también a una
-                    cuadra
-                    de
-                    Av. Del Libertador.
-                    Edificio muy bien conservado, con 2 ascensores principales y uno de servicio.
-                    Piso alto, muy luminoso, todo externo al lateral.
-                    Hall acceso, cocina con lavadero incorporado sobre bajo mesada, mesada de granito negro , muchas
-                    alacenas y
-                    muebles de cocina.
-                    Living comedor de 5.00 x 3.00 con espacio para escritorio, 2 amplios dormitorios con mucho placard..
-                    Servicios individuales, calefón en cocina y estufas tiro balanceado en living y dormitorio. Aire
-                    acondicionado en L-comedo
-                </p>
-            </div>
-            <div class="cajaAlquiler">
-                <img class="imagenes" src="img/paraProyecto.jpg">
-                <h2 class="advert">Av. Las Heras (Super Luminoso)</h2>
-                <p class="textAdvert"><strong>Excelente ubicación</strong> sobre <mark>Av. Las Heras</mark>a esquina
-                    <b>Sanchez
-                        de Bustamante</b>, próximo a todo tipo de medios de transporte público como así también a una
-                    cuadra
-                    de
-                    Av. Del Libertador.
-                    Edificio muy bien conservado, con 2 ascensores principales y uno de servicio.
-                    Piso alto, muy luminoso, todo externo al lateral.
-                    Hall acceso, cocina con lavadero incorporado sobre bajo mesada, mesada de granito negro , muchas
-                    alacenas y
-                    muebles de cocina.
-                    Living comedor de 5.00 x 3.00 con espacio para escritorio, 2 amplios dormitorios con mucho placard..
-                    Servicios individuales, calefón en cocina y estufas tiro balanceado en living y dormitorio. Aire
-                    acondicionado en L-comedo
-                </p>
-            </div>
-
+            <h2 class="title__destacados">Alquileres</h2>
+            <h2 class="title__destacados">Destacados</h2>
+            <h3>
+                Busca segun tu nececidad en
+                las siguientes características
+            </h3>
+            <ul class="bloqueAlquiler">
+                <li class="bloqueAlquiler__items"><a>Zona</a></li>
+                <li class="bloqueAlquiler__items"><a>Ambiente</a></li>
+                <li class="bloqueAlquiler__items"><a>Características</a></li>
+                <li class="bloqueAlquiler__items"><a>Precio</a></li>
+            </ul>
         </section>
-        <section class="sectionTasa">
-            <h2> ¿Queres Tasar tu inmuebinmueble? </h2>
-            <button class="tasa" type="button">ir</button>
-        </section>
-        <h2> Terrenos Destacados</h2>
-        <section class="sectionTerreno">
-            <div class="cajaTerreno">
-                <img>
-                <h3 class="sectionTitle">Terrenos Destacados</h3>
-                <h2 class="advert">Av. Las Heras (Super Luminoso)</h2>
-                <p class="textAdvert"><strong>Excelente ubicación</strong> sobre <mark>Av. Las Heras</mark>a esquina
-                    <b>Sanchez
-                        de Bustamante</b>, próximo a todo tipo de medios de transporte público como así también a una
-                    cuadra
-                    de
-                    Av. Del Libertador.
-                    Edificio muy bien conservado, con 2 ascensores principales y uno de servicio.
-                    Piso alto, muy luminoso, todo externo al lateral.
-                    Hall acceso, cocina con lavadero incorporado sobre bajo mesada, mesada de granito negro , muchas
-                    alacenas y
-                    muebles de cocina.
-                    Living comedor de 5.00 x 3.00 con espacio para escritorio, 2 amplios dormitorios con mucho placard..
-                    Servicios individuales, calefón en cocina y estufas tiro balanceado en living y dormitorio. Aire
-                    acondicionado en L-comedo
+        <section>
+            <div class="bloqueTaza">
+                <h2>¿Queres conocer el valor</h2>
+                <h2>real de tu vivienda?</h2>
+                <p>Contactanos para obtener una tasación precisa y justa
+    Descubrí cómo podemos ayudarte a maximizar el valor de tu propiedad
                 </p>
+                <div class="form_input">
+                    <textarea placeholder="Escribí una breve descripción...  "></textarea>
+                </div>
+                <button>Enviar</button>
             </div>
-            <div class="cajaTerreno">
-                <img>
-                <h3 class="sectionTitle">Terrenos Destacados</h3>
-                <h2 class="advert">Av. Las Heras (Super Luminoso)</h2>
-                <p class="textAdvert"><strong>Excelente ubicación</strong> sobre <mark>Av. Las Heras</mark>a esquina
-                    <b>Sanchez
-                        de Bustamante</b>, próximo a todo tipo de medios de transporte público como así también a una
-                    cuadra
-                    de
-                    Av. Del Libertador.
-                    Edificio muy bien conservado, con 2 ascensores principales y uno de servicio.
-                    Piso alto, muy luminoso, todo externo al lateral.
-                    Hall acceso, cocina con lavadero incorporado sobre bajo mesada, mesada de granito negro , muchas
-                    alacenas y
-                    muebles de cocina.
-                    Living comedor de 5.00 x 3.00 con espacio para escritorio, 2 amplios dormitorios con mucho placard..
-                    Servicios individuales, calefón en cocina y estufas tiro balanceado en living y dormitorio. Aire
-                    acondicionado en L-comedo
-                </p>
+        </section>
+        <section>
+            <div class="seccionVneta">
+                <h2 class="title__destacados">EN VENTA</h2>
+                <ul class="bloqueVenta">
+                    <li class="bloqueVenta__items"><a>Departmentos</a></li>
+                    <li class="bloqueVenta__items"><a>Locales</a></li>
+                    <li class="bloqueVenta__items"><a>Terrenos</a></li>
+                </ul>
             </div>
         </section>
     </main>
     <footer>
         <h2>Contacto</h2>
-        <div class="information">
-            <ul>
-                <li>jbxijdbcdi</li>
-                <li>jbxijdbcdi</li>
-                <li>jbxijdbcdi</li>
-            </ul>
+        <ul>
+            <li><a href="">knaknakna</a></li>
+            <li><a href="">knaknakna</a></li>
+            <li><a href="">knaknakna</a></li>
+        </ul>
         </div>
     </footer>
 
