--- a/src/views/alquiler.html
+++ b/src/views/alquiler.html
@@ -1,11 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zarlenga Propiedades</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/alquiler.css">
 </head>
+
 <body>
-    <h1>HOLA</h1>
+    <header>
+        <div class="navbar_container">
+            <h3 class="navbar_logo">Z</h3>
+            <ul class="navbar_list">
+                <li class="navbar_items"></li><a href="#">inicio</a>
+                <li class="navbar_items"></li><a href="alquiler">alquileres</a>
+                <li class="navbar_items"></li><a href="#">venta</a>
+                <li class="navbar_items"></li><a href="#">tazar</a>
+                <li class="navbar_items"></li><a href="#">contacto</a>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <div class="filter_container">
+            <ul class="filter_list">
+                <li class="filter_items">Zona</li>
+                <li class="filter_items">Ambiente</li>
+                <li class="filter_items">Características</li>
+                <li class="filter_items">Precio</li>
+            </ul>
+        </div>
+        <div class="details_container">
+            <img src="img/paraProyecto.jpg">
+            <div class="details_items--container">
+                <div class="price_container">
+                    <h2>$ 400.000</h2>
+                    <p>$ 95.000 Expensas</p>
+                </div>
+                <div class="features_container">
+                    <h3>Palermo</h3>
+                    <ul>
+                        <li>133 m² tot.</li>
+                        <li>3 amb.</li>
+                        <li>2 dorm.</li>
+                        <li>2 baños</li>
+                    </ul>
+                    <p>Departamento 4 Ambientes Mas Dependencia en palier privado, Piso Alto, Contrafrente y luminoso
+                        Excelente Piso Alto, Contrafrente y luminoso Excelente y ... </p>
+                </div>
+            </div>
+        </div>
+        <div class="details_container">
+            <img src="img/paraProyecto.jpg" width="400px">
+            <div class="details_items--container">
+                <h2>$ 400.000</h2>
+                <p>$ 95.000 Expensas</p>
+                <h3>Palermo</h3>
+                <div>
+                    <ul>
+                        <li>133 m² tot.</li>
+                        <li>3 amb.</li>
+                        <li>2 dorm.</li>
+                        <li>2 baños</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="details_container">
+            <img src="img/paraProyecto.jpg" width="400px">
+            <div class="details_items--container">
+                <h2>$ 400.000</h2>
+                <p>$ 95.000 Expensas</p>
+                <h3>Palermo</h3>
+                <div>
+                    <ul>
+                        <li>133 m² tot.</li>
+                        <li>3 amb.</li>
+                        <li>2 dorm.</li>
+                        <li>2 baños</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="details_container">
+            <img src="img/paraProyecto.jpg" width="400px">
+            <div class="details_items--container">
+                <h2>$ 400.000</h2>
+                <p>$ 95.000 Expensas</p>
+                <div>
+                    <h3>Palermo</h3>
+                    <ul>
+                        <li>133 m² tot.</li>
+                        <li>3 amb.</li>
+                        <li>2 dorm.</li>
+                        <li>2 baños</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="footer_container">
+            <h2>Contacto</h2>
+            <ul class="footer_list">
+                <li class="footer_items"><a href="#">Cel: 11 4408-0444</a></li>
+                <div>-</div>
+                <li class="footer_items"><a href="#">Dirección: Salguero 1253</a></li>
+                <div>-</div>
+                <li class="footer_items"><a href="#">Mail: aszarlenga@hotmail.com</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
