--- a/src/views/index.html
+++ b/src/views/index.html
@@ -23,7 +23,7 @@
             <h3 class="navbar_logo">Z</h3>
             <ul class="navbar_list">
                 <li class="navbar_items"></li><a href="#">inicio</a>
-                <li class="navbar_items"></li><a href="#">alquileres</a>
+                <li class="navbar_items"></li><a href="alquiler">alquileres</a>
                 <li class="navbar_items"></li><a href="#">venta</a>
                 <li class="navbar_items"></li><a href="#">tazar</a>
                 <li class="navbar_items"></li><a href="#">contacto</a>
@@ -90,9 +90,11 @@
         <div class="footer_container">
             <h2>Contacto</h2>
             <ul class="footer_list">
-                <li class="footer_items"><a href="#">Mail: aszarlenga@hotmail.com</a></li>
                 <li class="footer_items"><a href="#">Cel: 11 4408-0444</a></li>
+                <div>-</div>
                 <li class="footer_items"><a href="#">Dirección: Salguero 1253</a></li>
+                <div>-</div>
+                <li class="footer_items"><a href="#">Mail: aszarlenga@hotmail.com</a></li>
             </ul>
         </div>
     </footer>
